[package]
name = "enough"
version = "0.1.0"
authors = ["Philipp Emanuel Weidmann <pew@worldwidemann.com>"]
description = "A simple blogging system"
repository = "https://github.com/p-e-w/enough"
readme = "README.md"
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
axum = "0.6.0-rc.1"
askama = "0.11.1"
