[workspace]
members = [".", "entity", "migration"]

[package]
name = "enough"
version = "0.1.0"
authors = ["Philipp Emanuel Weidmann <pew@worldwidemann.com>"]
description = "A simple blogging system"
repository = "https://github.com/p-e-w/enough"
readme = "README.md"
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
sea-orm = { version = "0.10.1", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
axum = "0.6.0-rc.4"
askama = "0.11.1"
regex = "1.6.0"
chrono = "0.4.22"
entity = { path = "entity" }
migration = { path = "migration" }
