[workspace]
members = [".", "entity", "migration"]

[package]
name = "enough"
version = "0.1.0"
authors = ["Philipp Emanuel Weidmann <pew@worldwidemann.com>"]
description = "A simple blogging system"
repository = "https://github.com/p-e-w/enough"
readme = "README.md"
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.65"

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
sea-orm = { version = "0.10.5", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
axum = "0.6.1"
askama = "0.11.1"
regex = "1.7.0"
chrono = "0.4.23"
pulldown-cmark = { version = "0.9.2", default-features = false }
entity = { path = "entity" }
migration = { path = "migration" }
