[package]
name = "migration"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
publish = false

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "0.11.1", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
